syntax = "proto3";

option go_package = "github.com/the-swiply/profile/pkg/api/profile";

import "google/protobuf/timestamp.proto";

package swiply.profile;

message Interest {
  int64 id = 1;
  string definition = 2;
}

enum Gender {
  GENDER_UNSPECIFIED = 0;
  MALE = 1;
  FEMALE = 2;
}

enum SubscriptionType {
  SUBSCRIPTION_TYPE_UNSPECIFIED = 0;
  STANDARD = 1;
  PRIMARY = 2;
}

message Location {
  double lat = 1;
  double long = 2;
}

message UserProfile {
  string id = 1;
  string email = 2;
  string name = 3;
  repeated Interest interests = 4;
  google.protobuf.Timestamp birth_day = 5;
  Gender gender = 6;
  string info = 7;
  SubscriptionType subscription_type = 8;
  Location location = 9;
}